crates/wac-parser/tests/resolution/fail/invalid-world-include.wac
package test:comp;

type x = func();

world w {
    include x;
}